# affordagent

./: README.md  item_recognizer.py  item_researcher.py  main.py  prompt.md  pyproject.toml
prompts/: item_recognizer.md  item_researcher.md
