[project]
name = "affordagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.8",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-tavily>=0.2.15",
    "langgraph>=0.2.0",
    "tavily-python>=0.5.0",
    "langchain-google-vertexai>=3.2.0",
    "langchain-openai>=1.1.6",
]
